# shaker

./: .gitignore  README.md  manage.py  pyproject.toml  requirements.txt
accounts/: views.py
accounts/templates/registration/: login.html  signup.html
radio/: admin.py  forms.py  models.py  processor.py  urls.py  views.py
radio/migrations/: 0001_initial.py  0001_squashed_0009_auto_20200715_0812.py  0002_auto_20200713_2101.py  0003_song_user_added.py  0004_auto_20200714_0825.py  0005_auto_20200714_1006.py  0005_delete_siteconfiguration.py  0006_remove_song_year.py  0007_auto_20200714_1024.py  0008_auto_20200714_2058.py  0009_auto_20200715_0812.py
radio/static/radio/css/: format.css  forms.css  main.css  main.old.css  player.css  styles.css
radio/static/radio/js/: bg.js  player.js
radio/templates/radio/: index.html  library.html
shaker/: asgi.py  settings.py  urls.py  wsgi.py
shaker/accounts/: forms.py  urls.py  views.py
shaker/accounts/templates/accounts/: profile.html
shaker/accounts/templates/registration/: login.html  signup.html
shaker/core/: asgi.py  settings.py  urls.py  wsgi.py
shaker/radio/: admin.py  forms.py  middleware.py  models.py  urls.py  views.py
shaker/radio/migrations/: 0001_squashed_0009_auto_20200715_0812.py  0002_auto_20200715_1328.py  0003_auto_20200715_1405.py  0004_auto_20200715_1408.py  0006_background.py  0007_auto_20201106_1117.py  0008_auto_20201106_1121.py
shaker/radio/templates/radio/: index.html  (+1 more)
shaker/templates/: base.html
templates/: base.html  index.html
templates/registration/: login.html  signup.html
(+8 files in other folders)
