[tool.poetry]
name = "shaker"
version = "0.1.0"
description = ""
authors = ["Alex Rozum <rozumalex@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
appdirs = "^1.4.4"
asgiref = "^3.2.10"
CacheControl = "^0.12.6"
colorama = "^0.4.3"
contextlib2 = "^0.6.0"
distlib = "^0.3.1"
distro = "^1.5.0"
django = "^3.1.2"
django-cleanup = "^5.1.0"
django-environ = "^0.4.5"
django-js-asset = "^1.2.2"
django-mptt = "^0.11.0"
gunicorn = "^20.0.4"
html5lib = "^1.1"
ipaddr = "^2.2.0"
lockfile = "^0.12.2"
msgpack = "^1.0.0"
mutagen = "^1.45.1"
packaging = "^20.4"
pep517 = "^0.8.2"
flake8 = "^3.8.4"
progress = "^1.5"
psycopg2 = "^2.8.6"
pyparsing = "^2.4.7"
pytoml = "^0.1.21"
pytz = "^2020.1"
requests = "^2.24.0"
retrying = "^1.3.3"
six = "^1.15.0"
sqlparse = "^0.3.1"
urllib3 = "^1.25.10"
webencodings = "^0.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
